06_grid-layout-final-solution

--- a/02_grid-layout/execution/index.html
+++ b/02_grid-layout/execution/index.html
@@ -1,6 +1,8 @@
 <link rel="stylesheet" href="index.css">
-<img src="https://images-assets.nasa.gov/image/PIA01546/PIA01546~orig.jpg">
-<img src="https://images-assets.nasa.gov/image/PIA00407/PIA00407~small.jpg">
-<img src="https://images-assets.nasa.gov/image/PIA13593/PIA13593~small.jpg">
-<img src="https://images-assets.nasa.gov/image/PIA08528/PIA08528~orig.jpg">
-<img src="https://images-assets.nasa.gov/image/PIA05208/PIA05208~small.jpg">
+<div class="grid-container">
+  <img src="https://images-assets.nasa.gov/image/PIA01546/PIA01546~orig.jpg" class="one" alt="True Color of Mars - Pathfinder Sol 10 at Noon">
+  <img src="https://images-assets.nasa.gov/image/PIA00407/PIA00407~small.jpg" class="two" alt="Global Color Views of Mars">
+  <img src="https://images-assets.nasa.gov/image/PIA13593/PIA13593~orig.jpg" class="three" alt="Intrepid Crater on Mars">
+  <img src="https://images-assets.nasa.gov/image/PIA08528/PIA08528~orig.jpg" class="four" alt="Possible Meteorite in Columbia Hills on Mars False Color">
+  <img src="https://images-assets.nasa.gov/image/PIA05208/PIA05208~small.jpg" class="five" alt="Mars Under the Microscope color">
+</div>
